--- a/artigos.html
+++ b/artigos.html
@@ -18,17 +18,26 @@
         <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
-        <!-- Links flutuantes -->
-        <div id="buttons">
-            <div class="osm-link">
-                <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">Meu OpenStreetMap</a>
-            </div>
+<!-- Botões OpenStreetMap, LinkedIn e GitHub -->
+<div id="buttons">
+    <div class="osm-link">
+        <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" alt="OpenStreetMap" width="24" height="24">
+        </a>
+    </div>
 
-            <div class="linkedin-link">
-                <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
-                    Conecte-se comigo no LinkedIn
-                </a>
-            </div>
+    <div class="linkedin-link">
+        <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="24" height="24">
+        </a>
+    </div>
+
+    <div class="github-link">
+        <a href="https://github.com/Eipatrick/Portfolio_cartografia" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="24" height="24">
+        </a>
+    </div>
+</div>
         </div>
 
             <!-- Vinculação ao script.js -->
