--- a/index.html
+++ b/index.html
@@ -6,34 +6,43 @@
     <title>Home - Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
 
-        <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
-
+        /* Estilos existentes */
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-        <!-- Selo "IA Friendly" -->
-        <div id="ia-friendly">IA Integrada</div>
+    <!-- Selo "IA Friendly" -->
+    <div id="ia-friendly">IA Integrada</div>
+
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
         <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
-        <!-- Botões OpenStreetMap e LinkedIn -->
-        <div id="buttons">
-            <div class="osm-link">
-                <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">Meu OpenStreetMap</a>
-            </div>
-        
-            <div class="linkedin-link">
-                <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
-                    Conecte-se comigo no LinkedIn
-                </a>
-            </div>        
-        </div>
+<!-- Botões OpenStreetMap, LinkedIn e GitHub -->
+<div id="buttons">
+    <div class="osm-link">
+        <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" alt="OpenStreetMap" width="24" height="24">
+        </a>
+    </div>
+
+    <div class="linkedin-link">
+        <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="24" height="24">
+        </a>
+    </div>
+
+    <div class="github-link">
+        <a href="https://github.com/Eipatrick/Portfolio_cartografia" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="24" height="24">
+        </a>
+    </div>
+</div>
     </header>
 
     <!-- Menu de Navegação -->
@@ -52,35 +61,34 @@
             <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente, focado na América Latina. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, sem neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
         </section>
 
-        <body>
-            <div class="container">
-                <h2>Mural de Habilidades</h2>
-                <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
-                <div class="skill">
-                    <div class="skill-name">QGIS</div>
-                    <div class="progress-bar"><div class="progress" data-progress="20">20%</div></div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Python</div>
-                    <div class="progress-bar"><div class="progress" data-progress="10">10%</div></div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Sensoriamento Remoto</div>
-                    <div class="progress-bar"><div class="progress" data-progress="30">30%</div></div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Cartografia</div>
-                    <div class="progress-bar"><div class="progress" data-progress="40">40%</div></div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Geoestatística</div>
-                    <div class="progress-bar"><div class="progress" data-progress="15">15%</div></div>
-                </div>
-                <div class="skill">
-                    <div class="skill-name">Power BI</div>
-                    <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
-                </div>
+        <div class="container">
+            <h2>Mural de Habilidades</h2>
+            <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
+            <div class="skill">
+                <div class="skill-name">QGIS</div>
+                <div class="progress-bar"><div class="progress" data-progress="20">20%</div></div>
             </div>
+            <div class="skill">
+                <div class="skill-name">Python</div>
+                <div class="progress-bar"><div class="progress" data-progress="10">10%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Sensoriamento Remoto</div>
+                <div class="progress-bar"><div class="progress" data-progress="30">30%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Cartografia</div>
+                <div class="progress-bar"><div class="progress" data-progress="40">40%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Geoestatística</div>
+                <div class="progress-bar"><div class="progress" data-progress="15">15%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Power BI</div>
+                <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
+            </div>
+        </div>
 
         <section class="banner">
             <div class="banner-content">
