--- a/Primeiro_Projeto_Livre.html
+++ b/Primeiro_Projeto_Livre.html
@@ -62,6 +62,18 @@
         .btn-blog:hover {
             background-color: #5a4232; /* Marrom médio escuro */
         }
+        .contact-panel {
+            background-color: #f1f1f1;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px 0;
+            text-align: center;
+        }
+        .contact-panel p {
+            margin: 0;
+            font-size: 1rem;
+            color: #555;
+        }
         .footer {
             text-align: center;
             margin-top: 40px;
@@ -84,11 +96,19 @@
         
         <p>Este projeto não segue uma linha acadêmica, trata-se apenas de exercícios realizados livremente para demonstrar os aprendizados no curso <strong>DescomplicaQGIS</strong> até então, sendo atualizado no percorrer das aulas.</p>
 
-        <!-- Mapa Web-->
+        <!-- Painel de Contato -->
+        <div class="contact-panel">
+            <p>
+                Infelizmente o mapa web não está disponível no momento, por favor, baixe o Geopackage para visualizar os dados no QGIS ou faça o download do mapa web para visualização em seu navegador, pelo <strong>index.html</strong>. Obrigado!
+            </p>
+        </div>
 
         <!-- Botões -->
         <div>
-            <a href="https://drive.google.com/uc?export=download&id=1mOnWECuCEIF8S50dvSVoocLfS3x8kP0y" class="btn" download>Baixar Geopackage</a>
+            <a href="https://drive.google.com/file/d/133eq6Sy_UjS6RySqDZbeOD54qGINbeDP/view?usp=sharing" class="btn" download>Baixar Geopackage</a>
+
+            <a href="https://drive.google.com/file/d/12dzL3EClY7Zyjola1pxPhUFtjVDffBXW/view" class="btn" download>Baixar Mapa Web</a>
+
             <a href="index.html" class="btn btn-blog">Voltar ao Blog</a>
         </div>
     </div>
