Projeto_QGIS_Desafio_Imobiliario
Projeto_QGIS_Desafio_Imobiliario

--- a/projetos.html
+++ b/projetos.html
@@ -48,22 +48,29 @@
         <a href="contato.html">Contato</a>
     </nav>
 
-    <!-- Conteúdo Principal -->
-    <div class="container">
-        <!-- Seção Projetos -->
-        <section id="projetos">
-            <h2>Projetos</h2>
+   <!-- Conteúdo Principal -->
+<div class="container">
+    <!-- Seção Projetos -->
+    <section id="projetos">
+        <h2>Projetos</h2>
 
-            <!-- Projeto 1 -->
-            <div class="project">
-                <h3>Análise de Dados Geográficos: População, IDHM e PIB</h3>
-                <p>Bem-vindo ao meu primeiro projeto de mapeamento e análise de dados geográficos utilizando o <strong>QGIS</strong>! Aqui foi explorada a relação entre indicadores socioeconômicos fundamentais — <strong>População</strong>, <strong>Índice de Desenvolvimento Humano Municipal (IDHM)</strong> e <strong>Produto Interno Bruto (PIB)</strong> — no Brasil.</p>
-                <p>Trata-se de um estudo baseado no curso <strong>Descomplica QGIS</strong>, em andamento, logo um projeto piloto, na medida em que houver avanços nas aulas, será atualizado até que seja finalizado.</p>
-                <a href="Primeiro_Projeto_Livre.html">Acessar</a>
-            </div>
+        <!-- Projeto 1 -->
+        <div class="project">
+            <h3>Análise de Dados Geográficos: População, IDHM e PIB</h3>
+            <p>Bem-vindo ao meu primeiro projeto de mapeamento e análise de dados geográficos utilizando o <strong>QGIS</strong>! Aqui foi explorada a relação entre indicadores socioeconômicos fundamentais — <strong>População</strong>, <strong>Índice de Desenvolvimento Humano Municipal (IDHM)</strong> e <strong>Produto Interno Bruto (PIB)</strong> — no Brasil.</p>
+            <p>Trata-se de um estudo baseado no curso <strong>Descomplica QGIS</strong>, em andamento. É um projeto piloto que será atualizado conforme o avanço das aulas até sua finalização.</p>
+            <a href="Primeiro_Projeto_Livre.html" class="btn">Acessar</a>
+        </div>
 
-        </section>
-    </div>
+        <!-- Projeto 2 - Desafio Imobiliário -->
+        <div class="project">
+            <h3>Desafio Imobiliário: Mapeamento Urbanístico em São Paulo</h3>
+            <p>Este projeto consiste em um mapeamento urbanístico para determinação de áreas estratégicas em São Paulo, visando investimento imobiliário. O cliente solicitou uma análise com base em critérios específicos, como proximidade de estações de metrô, afastamento de áreas de risco e densidade populacional.</p>
+            <p>O projeto foi desenvolvido utilizando o <strong>QGIS</strong> e faz parte do curso <strong>Descomplica QGIS</strong>. Os dados e mapas gerados estão disponíveis para download e visualização.</p>
+            <a href="Desafio_Imobiliario_QGIS.html" class="btn">Acessar</a>
+        </div>
+    </section>
+</div>
 
     <!-- Rodapé -->
     <footer id="footer">
