--- a/projetos.html
+++ b/projetos.html
@@ -67,7 +67,7 @@
             <h3>Desafio Imobiliário: Mapeamento Urbanístico em São Paulo</h3>
             <p>Este projeto consiste em um mapeamento urbanístico para determinação de áreas estratégicas em São Paulo, visando investimento imobiliário. O cliente solicitou uma análise com base em critérios específicos, como proximidade de estações de metrô, afastamento de áreas de risco e densidade populacional.</p>
             <p>O projeto foi desenvolvido utilizando o <strong>QGIS</strong> e faz parte do curso <strong>Descomplica QGIS</strong>. Os dados e mapas gerados estão disponíveis para download e visualização.</p>
-            <a href="Desafio_Imobiliario_QGIS.html" class="btn">Acessar</a>
+            <a href="Desafio_Imobiliário_QGIS/Desafio_Imobiliario_QGIS.html" class="btn">Acessar</a>
         </div>
     </section>
 </div>
