--- a/Desafio_Imobiliário_QGIS/Desafio_Imobiliario_QGIS.html
+++ b/Desafio_Imobiliário_QGIS/Desafio_Imobiliario_QGIS.html
@@ -114,7 +114,7 @@
             <a href="https://drive.google.com/file/d/1XZ5mvehy4f1v2sUjXHnM4rWj-N7mpTT4/view?usp=sharing" class="btn" download>Baixar ShapeFile</a>
             <a href="https://www.google.com/maps/d/edit?mid=1_nQhilDowjI2jtIZjiioh0ujLhyGL9I&usp=sharing" class="btn" target="_blank">Acessar Mapa no Google</a>
             <a href="Desafio_Imobiliario_Descomplica_QGIS.pdf" class="btn" download>Mapa em PDF</a>
-            <a href="projetos.html" class="btn btn-blog">Voltar</a>
+            <a href="/projetos.html" class="btn btn-blog">Voltar</a>
         </div>
 
         <div class="footer">
