--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- Seção Sobre -->
         <section id="sobre">
             <div class="sobre-container">
-                <img src="foto_perfil.jpg" alt="Foto de Paulo Patrick">
+                <img src="Foto_Perfil.jpg" alt="Foto de Paulo Patrick">
                 <div class="sobre-texto">
                     <h2>Sobre Mim</h2>
                     <p>Olá, meu nome é Paulo Patrick e sou estudante de geografia, também formado em engenharia civil. Busco contribuir com a sociedade fora do escopo capitalista através de análises geoespaciais, sociais, políticas e demais áreas envolventes do meio ambiente, focado na América Latina. O intuito deste portfólio é apresentar meus projetos acompanhados de meus posicionamentos filosóficos e políticos, sem neutralidade, portanto deixo aqui minhas intenções para além da ciência geográfica.</p>
