--- a/projetos.html
+++ b/projetos.html
@@ -12,10 +12,9 @@
             /* Estilos para o cabeçalho com imagem de fundo */
             header {
                 position: relative;
-                padding: 20px;
                 text-align: center;
                 color: white; /* Cor do texto para contrastar com o fundo */
-                background-image: url(cartografia-enfoque-01-3690593650.jpg); /* Caminho da imagem de fundo */
+                background-image: url(Terra.jpg); /* Caminho da imagem de fundo */
                 background-size: cover; /* Cobrir todo o espaço do cabeçalho */
                 background-position: center; /* Centralizar a imagem */
                 background-repeat: no-repeat; /* Evitar repetição */
