--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                 <div class="progress-bar"><div class="progress" data-progress="10">10%</div></div>
             </div>
             <div class="skill">
+                <div class="skill-name">Power BI</div>
+                <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Banco de Dados</div>
+                <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
+            </div>
+            <div class="skill">
                 <div class="skill-name">Sensoriamento Remoto</div>
                 <div class="progress-bar"><div class="progress" data-progress="30">30%</div></div>
             </div>
@@ -114,10 +122,6 @@
             <div class="skill">
                 <div class="skill-name">Geoestatística</div>
                 <div class="progress-bar"><div class="progress" data-progress="15">15%</div></div>
-            </div>
-            <div class="skill">
-                <div class="skill-name">Power BI</div>
-                <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
             </div>
         </div>
 
