--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html">Início</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
@@ -97,7 +97,7 @@
             <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
             <div class="skill">
                 <div class="skill-name">QGIS</div>
-                <div class="progress-bar"><div class="progress" data-progress="35">35%</div></div>
+                <div class="progress-bar"><div class="progress" data-progress="50">50%</div></div>
             </div>
             <div class="skill">
                 <div class="skill-name">Python</div>
@@ -108,8 +108,8 @@
                 <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
             </div>
             <div class="skill">
-                <div class="skill-name">Banco de Dados</div>
-                <div class="progress-bar"><div class="progress" data-progress="5">5%</div></div>
+                <div class="skill-name">Banco de Dados | SQL</div>
+                <div class="progress-bar"><div class="progress" data-progress="20">20%</div></div>
             </div>
             <div class="skill">
                 <div class="skill-name">Sensoriamento Remoto</div>
