--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2>Mural de Habilidades</h2>
             <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
             <div class="skill">
-                <div class="skill-name">QGIS</div>
+                <div class="skill-name">SIG | QGIS</div>
                 <div class="progress-bar"><div class="progress" data-progress="50">50%</div></div>
             </div>
             <div class="skill">
