--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Portfólio Geográfico</title>
+    <title>Portfólio Geográfico</title>
     <link rel="stylesheet" href="style.css">
 
     <!-- Favicon -->
@@ -46,8 +46,8 @@
     <!-- Cabeçalho com imagem de fundo -->
     <header>
         <h1>Portfólio Geográfico</h1>
-        <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
-        <p>Paulo Patrick Rodrigues da Silva</p>
+        <p>Bem-vindo ao meu portfólio de projetos focados em geoprocessamento e sensoriamento remoto./p>
+        <p>© Paulo Patrick Rodrigues da Silva</p>
 
         <!-- Botões OpenStreetMap, LinkedIn e GitHub -->
         <div id="buttons">
