--- a/artigos.html
+++ b/artigos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home - Portfólio Geográfico</title>
+        <title>Portfólio Geográfico</title>
         <link rel="stylesheet" href="style.css">
     
         <!-- Favicon -->
@@ -77,7 +77,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html">Início</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
