--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <div class="container">
             <a href="index.html">Início</a>
             <a href="projetos.html">Projetos</a>
-            <a href="artigos.html">Artigos</a>
             <a href="contato.html">Contato</a>
         </div>
     </nav>
@@ -172,11 +171,11 @@
     <footer>
         <div class="container">
             <p>Paulo Patrick Rodrigues da Silva, 2025.</p>
-            <p>
-                Este portfólio é de código aberto sob a 
+            <div class="footer">
+                Este projeto é de código aberto sob a 
                 <a href="license.md" target="_blank" class="license-link">licença GNU GPL v3</a>. 
                 Você pode usar e compartilhar todas as informações sem fins lucrativos, desde que dê os créditos.
-            </p>
+            </div>
             
             <div class="ai-credit">
                 <p>Este site foi criado com assistência das IA's DeepSeek e ChatGPT.</p>
