--- a/artigos.html
+++ b/artigos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home - Portfólio Geográfico</title>
+        <title>Portfólio Geográfico</title>
         <link rel="stylesheet" href="style.css">
     
         <!-- Favicon -->
@@ -41,12 +41,12 @@
     </head>
 <body>
         <!-- Selo "IA Friendly" -->
-        <div id="ia-friendly">IA Integrada</div>
+        <div id="ia-friendly">Feito com IA ♥</div>
     <!-- Cabeçalho -->
     <!-- Cabeçalho -->
     <header>
         <h1>Portfólio Geográfico</h1>
-        <p>Bem-vindo ao meu portfólio de projetos para a América Latina.</p>
+        <p>Bem-vindo ao meu portfólio de geoprocessamento e sensoriamento remoto.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
 <!-- Botões OpenStreetMap, LinkedIn e GitHub -->
@@ -77,7 +77,7 @@
 
     <!-- Menu de Navegação -->
     <nav>
-        <a href="index.html">Home</a>
+        <a href="index.html">Início</a>
         <a href="projetos.html">Projetos</a>
         <a href="artigos.html">Artigos</a>
         <a href="contato.html">Contato</a>
