--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <img src="Foto_Perfil.jpg" alt="Foto de Paulo Patrick">
                 <div class="sobre-texto">
                     <h2>Sobre Mim</h2>
-                    <p>Olá, meu nome é Paulo Patrick. Sou bacharel em Engenharia Civil e estudante de Geografia, com interesse em geoprocessamento, sensoriamento remoto, análises socioambientais e geoespaciais. Busco aplicar e expandir meus conhecimentos na produção de mapas e dashboards, contribuindo para o desenvolvimento ambiental sustentável. Meu objetivo é unir ciência e tecnologia para criar soluções que beneficiem a sociedade, enquanto continuo evoluindo intelectualmente e profissionalmente.</p>
+                    <p>Olá, meu nome é Paulo Patrick. Sou bacharel em Engenharia Civil e estudante de Geografia, com interesse em geoprocessamento, sensoriamento remoto, análises socioambientais e geoespaciais. Busco aplicar e expandir meus conhecimentos na produção de mapas e dashboards, contribuindo para o desenvolvimento social e econômico sustentável. Meu objetivo é unir ciência e tecnologia para criar soluções que beneficiem a sociedade, enquanto continuo evoluindo intelectualmente e profissionalmente.</p>
                 </div>
             </div>
         </section>
@@ -151,8 +151,12 @@
             <h2>Mural de Habilidades</h2>
             <p>Esta é uma autoavaliação subjetiva, sujeita a revisão conforme avanço nos estudos e projetos.</p>
             <div class="skill">
-                <div class="skill-name">QGIS</div>
+                <div class="skill-name">SIG | QGIS</div>
                 <div class="progress-bar"><div class="progress" data-progress="50">50%</div></div>
+            </div>
+            <div class="skill">
+                <div class="skill-name">Banco de Dados | SQL</div>
+                <div class="progress-bar"><div class="progress" data-progress="30">30%</div></div>
             </div>
             <div class="skill">
                 <div class="skill-name">Python</div>
