--- a/contato.html
+++ b/contato.html
@@ -45,28 +45,34 @@
     <!-- Cabeçalho -->
     <!-- Cabeçalho -->
     <header>
-        <h1>Portfólio Geográfico</h1>
+        <h1>Portfólio Cartográfico</h1>
         <p>Bem-vindo ao meu portfólio de geoprocessamento e sensoriamento remoto.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
         <!-- Links flutuantes -->
-<!-- Botões OpenStreetMap, LinkedIn e GitHub -->
+<!-- Botões OpenStreetMap, LinkedIn, GitHub e Freelancer -->
 <div id="buttons">
     <div class="osm-link">
-        <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" alt="OpenStreetMap" width="24" height="24">
+        <a href="https://www.openstreetmap.org/user/eipatrick" target="_blank" rel="noopener noreferrer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Openstreetmap_logo.svg" alt="OpenStreetMap">
         </a>
     </div>
 
     <div class="linkedin-link">
-        <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" width="24" height="24">
+        <a href="https://www.linkedin.com/in/paulo-patrick-rodrigues-da-silva-5a3791100/" target="_blank" rel="noopener noreferrer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn">
         </a>
     </div>
 
     <div class="github-link">
-        <a href="https://github.com/Eipatrick/Portfolio_cartografia" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="24" height="24">
+        <a href="https://github.com/Eipatrick/Portfolio_cartografia" target="_blank" rel="noopener noreferrer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub">
+        </a>
+    </div>
+
+    <div class="freelancer-link">
+        <a href="https://www.br.freelancer.com/u/eipatrick" target="_blank" rel="noopener noreferrer">
+            <img src="pngwing.com.png" alt="Freelancer.com">
         </a>
     </div>
 </div>
