--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfólio Geográfico</title>
+        <title>Portfólio Cartográfico</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -26,7 +26,7 @@
                 background-color: rgba(0, 0, 0, 0.5);
                 background-blend-mode: overlay;
                 width: 100hv;
-                height: 100vh;
+                height: 90vh;
             }
             
             header h1, header p {
