--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!-- Cabeçalho com imagem de fundo -->
     <header>
-        <h1>Portfólio Geográfico</h1>
+        <h1>Portfólio Cartográfico</h1>
         <p>Bem-vindo ao meu portfólio de geoprocessamento e sensoriamento remoto.</p>
         <p>Paulo Patrick Rodrigues da Silva</p>
 
