--- a/projetos.html
+++ b/projetos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfólio Geográfico</title>
+        <title>Portfólio Cartográfico</title>
         <link rel="stylesheet" href="style.css">
     
         <!-- Favicon -->
