Adição do Atlas

--- a/projetos.html
+++ b/projetos.html
@@ -89,6 +89,19 @@
 <div class="container">
     <!-- Seção Projetos -->
     <section id="projetos">
+
+        <h2>Projetos</h2>
+
+        <!-- Projeto 2 - Desafio Imobiliário -->
+        <div class="project">
+            <h3>Atlas Cartográfico Ambiental da Lagoa da Pampulha </h3>
+            <p> Este é um Atlas Cartográfico Ambiental da Lagoa da Pampulha, que visa apresentar uma análise ambiental utilizando técnicas de sensoriamento remoto e QGIS. O projeto explora índices espectrais (NDWI, NDVI, OMI), mapas térmicos (LST) e aspectos ambientais, urbanos e ecológicos.</p>
+            <p>Não é um trabalho acadêmico, o intuito é apresentar habilidades com geotecnologias, geoprocessamento e sensoriamento remoto.</p>
+            <a href="Atlas_Cartográfico/Atlas_cartografico.html" class="btn">Acessar</a>
+        </div>
+
+    </section>
+
         <h2>Projetos</h2>
 
         <!-- Projeto 2 - Desafio Imobiliário -->
