--- a/Atlas_Cartográfico/Atlas_cartografico.html
+++ b/Atlas_Cartográfico/Atlas_cartografico.html
@@ -128,6 +128,7 @@
   <div class="container">
     <h1>Atlas Cartográfico Ambiental da Lagoa da Pampulha</h1>
     <p><strong>Autor:</strong> Paulo Patrick Rodrigues da Silva</p>
+    <p><strong>Data da publicação:</strong> 07 de abril de 2025</p>
     <p><strong>Descrição:</strong> Análise ambiental da Lagoa da Pampulha com o uso de sensoriamento remoto e QGIS, explorando índices espectrais (NDWI, NDVI, OMI), mapas térmicos (LST) e aspectos ambientais, urbanos e ecológicos.</p>
 
     <h2>Sumário</h2>
@@ -156,6 +157,8 @@
       </li>
       <li>Considerações Finais</li>
     </ol>
+
+    <p>O sumário é uma prévia do que foi abordado no documento em PDF, acesse-o para leitura, os mapas estão apresentados abaixo.</p>
 
     <h2>Mapas Produzidos</h2>
     <img src="Lagoa_da_Pampulha_CBERS.png" class="map-image active" alt="Mapa de Contexto" />
