--- a/Desafio_Imobiliário_QGIS/Desafio_Imobiliario_QGIS.html
+++ b/Desafio_Imobiliário_QGIS/Desafio_Imobiliario_QGIS.html
@@ -139,6 +139,7 @@
     <div class="container">
         <h1>Desafio Imobiliário "Descomplica QGIS"</h1>
         <p><strong>Autor:</strong> Paulo Patrick Rodrigues da Silva</p>
+        <p><strong>Data da publicação:</strong> 24 de março de 2025</p>
         <p><strong>Descrição:</strong> Mapeamento urbanístico para determinação de área requisitada por cliente em São Paulo, visando investimento imobiliário.</p>
 
         <h2>Requisitos do Cliente</h2>
