--- a/artigos.html
+++ b/artigos.html
@@ -90,21 +90,32 @@
         <a href="contato.html">Contato</a>
     </nav>
 
-    <!-- Conteúdo Principal -->
-    <div class="container">
-        <!-- Seção Artigos -->
-        <section id="artigos">
-            <h2>Artigos</h2>
+<!-- Conteúdo Principal (comentado) 
+<div class="container">
+    
+    <section id="artigos">
+        <h2>Artigos</h2>
 
-            <!-- Artigo 1 -->
-            <div class="article">
-                <h3>Título exemplar</h3>
-                <p class="date">Publicado em: 10 de outubro de 2023</p>
-                <p>Neste artigo, discuto como a geografia pode contribuir para a compreensão e solução de problemas sociais e ambientais no mundo atual.</p>
-                <a href="artigo1.html">Leia mais</a>
-            </div>
-        </section>
+      
+        <div class="article">
+            <h3>Título exemplar</h3>
+            <p class="date">Publicado em: 10 de outubro de 2023</p>
+            <p>Neste artigo, discuto como a geografia pode contribuir para a compreensão e solução de problemas sociais e ambientais no mundo atual.</p>
+            <a href="artigo1.html">Leia mais</a>
+        </div>
+    </section>
+</div>
+-->
+
+<!-- Mensagem alternativa -->
+<section id="artigos">
+    <div class="contact-panel">
+        <p>
+            Ainda sem artigos publicados.<br>
+        </p>
     </div>
+</section>
+
 
 <!-- Rodapé -->
 <footer id="footer">
