--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
             }
         
             @media (max-width: 480px) {
+                header{
+                width: 90vw;
+                height: 90vh;
+                }
                 header h1 {
                     font-size: 1.8rem;
                 }
