--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         width: 95vw;
         height: auto;
         padding: 40px 10px;
+        margin-top: 3%;
     }
 
     header h1 {
@@ -133,6 +134,7 @@
 
 @media (max-width: 480px) {
     header {
+        margin-top: 3%;
         width: 95vw;
         height: auto;
         padding: 30px 8px;
