--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: center;
-                color: white;
+                color: rgb(128, 128, 128); /* Cor do texto para contrastar com o fundo */
             }
         
             #video-background {
